--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author:   # change following line to your infomation.
   linkedin_id: sandeepdasari # Leave blank if you don't have now
   facebook_username: sandcobainer # Leave blank if you don't have now
   email: sandeepdasari@ksu.edu  # Leave blank if you don't have now
-  cv: /static/assets/pdf/Fall18SandeepD.pdf  # An online CV can be printed as PDF, leave blank if you don't have now
+  cv: https://github.com/sandcobainer/audioblog-/blob/master/static/assets/pdf/Fall18SandeepD.pdf # An online CV can be printed as PDF, leave blank if you don't have now
   # skill icons are on avatar's left and right side. Reference urls are http://fontawesome.io/ and http://fizzed.com/oss/font-mfizz
   skill_icon1:
     - name: icon-cplusplus
@@ -28,13 +28,12 @@ author:   # change following line to your infomation.
     - name: icon-mongodb
     - name: icon-javascript-alt
 
-  desc: Data/machine learning engineer, embedded programmer, audio software engineer and musician. 
+  desc: Data science/machine learning engineer, embedded systems, audio programmer and musician. 
   detail: Constantly experimenting innovative solutions to engineer databases/datasets and apply machine learning in media art, medical science, home automation, embedded wearables or any similar interfacable technologies. I like using machine learning and statistics to solve problems for art of medical sciences. Hacking new micro-controllers or sensors on a daily basis is a goal I am trying to fulfill through a professional job.  
   subtit: Hack anything, build something.  # Describe yourself.
 
 # comment
-disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
-  name: jalpc
+#   name: jalpc
 
 # analytics
 ## google analytics
@@ -50,7 +49,7 @@ gio:  # if you wanna this feature, go to https://www.growingio.com/ to get your 
   # id:
 
 ## donation
-donation: on  # type 'on'/'off' to choice display donation button at post page or not
+donation: off  # type 'on'/'off' to choice display donation button at post page or not
 
 ## carousels
 index_carousel: on  # index page carousel switch
