second blog and fixed art890 directory in /blog

--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ author:   # change following line to your infomation.
     - name: icon-mongodb
     - name: icon-javascript-alt
 
-  desc: Data science/machine learning engineer, embedded systems, audio programmer and musician. 
-  detail: Constantly experimenting innovative solutions to engineer databases/datasets and apply machine learning in media art, medical science, home automation, embedded wearables or any similar interfacable technologies. I like using machine learning and statistics to solve problems for art of medical sciences. Hacking new micro-controllers or sensors on a daily basis is a goal I am trying to fulfill through a professional job.  
+  desc: Data science, Machine learning engineer, embedded systems, audio programming, musician. 
+  detail: Constantly experimenting innovative solutions to engineer databases/datasets and apply machine learning in media art, medical science, home automation, embedded wearables or any similar interfacable technologies. I like using machine learning and statistics to solve problems for art or nueroscience. Hacking new micro-controllers or sensors on a daily basis is a goal I am trying to fulfill through a professional job.  
   subtit: Hack anything, build something.  # Describe yourself.
 
 # comment
