--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Sandeep Dasari
 description: Portfolio and Project Blog
 keywords: sandeep, dasari, blog, jekyll, gh-pages, audio, github, programming, music, technology, machine learning, artificial intelligence, cognitive science, edm, dj
-baseurl:  # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
+baseurl: / # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
 url: # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
 img_path: /Jalpc/static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
