--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -6,7 +6,7 @@
 - name: Art 822
   href: /art822/
 
-- name: max
+- name: Max
   href: /max/
 
 # Don't display donation page: change donation to off at file '_config.yml'
