--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -18,7 +18,7 @@
 - name: Another Arduino Theremin
   #i18n: k1000-database-queries
   gh_user: sandcobainer
-  repo: ardutheremi 
+  repo: ardutheremi
   url: https://github.com/sandcobainer/ardutheremi
   img: /static/assets/img/landing/ardu.png
   desc: Theremin implemented on Arduino and Raspberry Pi 3B using ultrasonic range sensors
@@ -30,3 +30,20 @@
   url: https://github.com/sandcobainer/B-Link
   img: /static/assets/img/landing/blink.png
   desc: B-Link is a pacman game I desgined with my friend 'dissid' for Hack K-State 2016. The game runs through pygame and used Opencv to detect eye blinks of the gamer. The eye blink triggers a world update within the game, the number of blinks depends on the levels progressed through the game. When the player is cornered, the player can 'blink' to a new world of relatively better positions.
+
+
+- name: webSamplr
+  #i18n: morrowind-translation
+  gh_user: sandcobainer
+  repo: webSamplr
+  url: https://www.youtube.com/watch?v=13c0BHKo6YE&t=14s
+  img:
+  desc: webSamplr is a Max4Live device that enables the user to sample any sound source from the internet. It includes track and clip navigation within Ableton Live, as well as a database of popular sampling websites and sources. This sampler was updated to detect sample rate, show waveform in a spectograph and navigate only to copyright free websites.
+
+- name: mpkmini4Live
+  #i18n: morrowind-translation
+  gh_user: sandcobainer
+  repo: mpkmini4Live
+  url: https://github.com/sandcobainer/mpkmini4Live
+  img:
+  desc: This is a Max4Live MIDI script written using Ableton Live's Max live.api objects to navigate and control almost anything  on the Ableton Live screen. The script was setup for a basic 25$ MIDI keyboard using 2 channels of MIDI stream data. The script efficiently uses all 48 buttons on the board and was setup intuitively for live music looping.
