--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -1,6 +1,34 @@
 # careers section data
 # if you don't have language feature(language.yml is empty), ignore "i18n" items
 - name:
+    detail: Georgia Institute of Technology
+    i18n: sogema
+  desc:
+    detail: Interdisciplinary Graduate Researcher in music and STEM educational interfaces
+    i18n: sogema_desc
+  date:
+    detail: August 2019 - current
+    i18n: sogema_date
+  job:
+    detail: Graduate Research Assistant
+    i18n: sogema_job
+  icon: fa-server
+
+- name:
+    detail: Bellwethr Inc.
+    i18n:
+  desc:
+    detail: Setup the ML architecture and platform to run Reinforcement Learning, Markovian algorithms and integrate with the Bellwethr ML API
+    i18n: novomatic_b_desc
+  date:
+    detail: March 2019 - August 2019
+    i18n: novomatic_b_date
+  job:
+    detail: Machine Learning Engineer
+    i18n: novomatic_b_job
+  icon: fa-plus-square
+
+- name:
     detail: Kansas State University Global Campus
     i18n:
   desc:
@@ -38,7 +66,7 @@
     detail: August 2016 - Jan 2018
     i18n: sogema_date
   job:
-    detail: Graduate Research Assitant
+    detail: Graduate Research Assistant
     i18n: sogema_job
   icon: fa-server
 
