--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,5 +1,38 @@
 # If you don't have language feature(language.yml is empty), ignore "i18n" items
 # Suggest projects' img be located at '/static/assets/img/landing', and edit following img items.
+- name: CA Music
+  #i18n: morrowind-translation
+  gh_user: sandcobainer
+  repo: ca-music
+  url: https://github.com/sandcobainer/ca-music
+  # img: 
+  desc: New research studies to teach STEM concepts through cellular automata and music online and in museums
+
+- name: GrooveMachine
+  #i18n: morrowind-translation
+  gh_user: sandcobainer
+  repo: GrooveMachineWeb
+  url: https://github.com/GTCMT/GrooveMachineWeb
+  img: https://github.com/GTCMT/GrooveMachineWeb/blob/master/src/images/Colorful-Tapes.gif
+  desc: Contributor to ongoing project - Web based interface/interactive table to teach kids music and programming. One of the projects of Express Machinery Lab, Music Technology/Digital Media, Georgia Tech.
+
+- name: Interpolating Drum sampler
+  #i18n: morrowind-translation
+  gh_user: sandcobainer
+  repo: InterpolatingDrum
+  url: https://github.com/sandcobainer/Interpolating-Drum
+  # img: 
+  desc: Contributor to ongoing project - Web based interface/interactive table to teach kids music and programming. One of the projects of Express Machinery Lab, Music Technology/Digital Media, Georgia Tech.
+
+
+- name: webSamplr
+  #i18n: morrowind-translation
+  gh_user: sandcobainer
+  repo: webSamplr
+  url: https://gumroad.com/l/websamplr
+  img: /static/assets/img/blog/blog6-websamplr.png
+  desc: Made for sound designers and samplers, webSamplr is a Max4Live device that enables the user to sample any sound source from the web. 
+
 - name: Gestural Music Interfaces
   #i18n: kace-sma-tools
   gh_user: sandcobainer
@@ -13,15 +46,8 @@
   gh_user: dissid
   url: https://github.com/disssid/trafficked
   img: /static/assets/img/landing/trafficked.png
-  desc: Performed crash predicition using MongoDB and Logistic Regression. I setup the geospatial database in MonogDB by combining huge SQL datasets from highway police reports, weather to predict severe crash conditions. A visualization of the research is presented as the data is private only to the research group, Knowledge Discovery in Databases at K-state.
+  desc: Performed crash predicition using MongoDB and Logistic Regression. Topics - Data Visualization, Regression, Deep Learning, Classification
 
-- name: Another Arduino Theremin
-  #i18n: k1000-database-queries
-  gh_user: sandcobainer
-  repo: ardutheremi
-  url: https://github.com/sandcobainer/ardutheremi
-  img: /static/assets/img/landing/ardu.png
-  desc: Theremin implemented on Arduino and Raspberry Pi 3B using ultrasonic range sensors
 
 - name: B-Link , Hack K-State 2016
   #i18n: morrowind-translation
@@ -29,16 +55,9 @@
   repo: B-Link
   url: https://github.com/sandcobainer/B-Link
   img: /static/assets/img/landing/blink.png
-  desc: B-Link is a pacman game I desgined with my friend 'dissid' for Hack K-State 2016. The game runs through pygame and used Opencv to detect eye blinks of the gamer. The eye blink triggers a world update within the game, the number of blinks depends on the levels progressed through the game. When the player is cornered, the player can 'blink' to a new world of relatively better positions.
+  desc: B-Link is a pacman game I desgined with my friend 'dissid' for Hack K-State 2016. Gamer eye blink triggers a world update within the game to create a "secret" way of interaction that the gamer has to learn.
 
 
-- name: webSamplr
-  #i18n: morrowind-translation
-  gh_user: sandcobainer
-  repo: webSamplr
-  url: https://sandcobainer.github.io/audioblog-/max/2019/01/26/webSamplr.html
-  img: /static/assets/img/blog/blog6-websamplr.png
-  desc: webSamplr is a Max4Live device that enables the user to sample any sound source from the internet. It includes track and clip navigation within Ableton Live, as well as a database of popular sampling websites and sources. This sampler was updated to detect sample rate, show waveform in a spectograph and navigate only to copyright free websites.
 
 - name: mpkmini4Live
   #i18n: morrowind-translation
