--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -3,5 +3,5 @@
 label: Skills
 id : cs
 aspects: Python, JavaScript, C++, Max/MSP, MongoDB, MySQL, PostgreSQL, Linux/Shell, Unity, Git, HTML/CSS, Arduino, Electronics
-percentage: 83, 71, 73, 75, 86, 84, 88, 79, 60, 73, 71, 83, 78, 67
+percentage: 83, 71, 73, 90, 86, 84, 88, 79, 60, 70, 71, 83, 67
 
