--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ plugins:
   - jekyll-feed
 title: Sandeep Dasari
 description: Portfolio and Project Blog
-keywords: sandeep, dasari, blog, jekyll, gh-pages, audio, github, programming, music, technology, machine learning, artificial intelligence, cognitive science, edm, dj
+keywords: blog, audio, github, programming, music, technology, machine learning, artificial intelligence, web development
 baseurl: / # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
 url: # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
@@ -35,8 +35,6 @@ author:   # change following line to your infomation.
   detail:  Audio web and plugin development, VR, Audio spatialization, Data sonofication, visualization, HCI, Interactive Education, Entrepreneurship
   subtit: Can computers help us express ourselves artistically?  # Describe yourself.
 
-# comment
-#   name: jalpc
 
 # analytics
 ## google analytics
