--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -4,7 +4,4 @@
 # Images are expected to be located in `static/assets/img/`.
 
 - src: landing/header_one.jpg
-  title: Leap patch fist
-
-- src: landing/header_two.jpg
-  title: snowtime
+  title: Banner Background
